--- a/app/assets/stylesheets/revised/sections/primary_footer.scss
+++ b/app/assets/stylesheets/revised/sections/primary_footer.scss
@@ -38,13 +38,16 @@ $primary-footer-top-margin: 6 * $vertical-height;
     }
 
     h4 {
+      color: #fff;
+      font-size: 14px;
+      font-weight: 600;
       margin-bottom: 0.5 * $vertical-height;
-      font-size: 15px;
     }
 
     ul {
       @include list-unstyled;
 
+      font-size: 12px;
       margin: 0;
     }
 
@@ -84,12 +87,15 @@ $primary-footer-top-margin: 6 * $vertical-height;
   .terms-and-stuff {
     background: $black-off;
     color: $gray-light;
-    text-align: center;
+    text-align: right;
 
     p {
-      margin: 0;
+      color: $gray-light;
       font-size: 12px;
+      line-height: 1.5;
+      margin: 0;
       padding: 0;
+
     }
   }
 }
