--- a/app/assets/stylesheets/revised/sections/primary_header_nav.scss
+++ b/app/assets/stylesheets/revised/sections/primary_header_nav.scss
@@ -203,6 +203,7 @@ $mainmenu-open-zindex: 10;
       transition: padding $mainmenu-transform-speed linear;
       padding: (1.5 * $vertical-height) 0;
       z-index: $mainmenu-open-zindex + 3;
+      background-color: $black-off;
 
       a {
         font-size: 36px;
@@ -391,6 +392,7 @@ $mainmenu-open-zindex: 10;
       .signup-link {
         border-radius: 4px;
         border: 1px solid $link-color;
+        color: white;
         transition: background 0.05s linear;
 
         &:hover {
