--- a/app/views/landing_pages/_footer.haml
+++ b/app/views/landing_pages/_footer.haml
@@ -14,7 +14,7 @@
           .col-xs-8
             %h4 Bike Shops
             %p Protect your customers' purchases
-            %a.btn.btn-lg.btn-outline-success{ href: for_shops_path }
+            %a.btn.btn-lg.btn-outline-success{ href: for_bike_shops_path }
               Learn More
       %li
         .landing-group-card
@@ -28,11 +28,11 @@
       %li
         .landing-group-card
           .col-xs-4
-            = render '/landing_pages/icons/footer_advocacy_svg'
+            = render '/landing_pages/icons/footer_community_groups_svg'
           .col-xs-8
             %h4 Community Groups
             %p Promote anti-theft awareness
-            %a.btn.btn-lg.btn-outline-success{ href: for_advocacy_path }
+            %a.btn.btn-lg.btn-outline-success{ href: for_community_groups_path }
               Learn More
       %li
         .landing-group-card
