--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,44 +1,53 @@
-.root-landing-page
-  %header.root-landing-banner-header
+%main.root-landing-page
+  %header.jumbotron.root-landing-banner-header.bg-image-bike-hero
     .container
-      .row
-        .root-landing-header-text
-          %p
-            %strong
-              = number_with_delimiter Counts.recoveries
-            bikes recovered.
-          %h1
-            <span>Bike</span> <span>Registration</span> <span>that</span> <span>Works</span>
-          %a.btn.btn-lg.btn-success.root-action-btn{ href: new_user_path }
-            Get started, it's free
-        .root-landing-signup
-          - unless current_user.present?
-            = form_for User.new do |f|
-              .form-group
-                = f.label :name, 'full name', class: 'sr-only'
-                = f.text_field :name, placeholder: 'name', class: 'form-control'
-              .row
-                .form-group.col-md-6
-                  = f.label :email, class: 'sr-only'
-                  = f.email_field :email, placeholder: 'email', class: 'form-control'
-                .form-group.col-md-6
-                  = f.label :password, class: 'sr-only'
-                  = f.password_field :password, placeholder: 'password', class: 'form-control'
+      .root-landing-header-text
+        %h2
+          Over
+          = number_with_delimiter(Counts.recoveries_value)
+          Bikes Recovered
+        %h1.upcase
+          Bike registration that works
+        %h2
+          = link_to new_bike_path do
+            Register Now
+            %span.chevron &raquo;
+  .container-fluid.root-landing-banner-subheader
+    .row
+      .subheader-tile.col-md-3
+        = link_to for_bike_shops_path, class: "subheader-tile-link" do
+          .subheader-image.bg-image-bike-shops
+          .subheader-image-caption
+            %em for&nbsp;
+            %span.upcase
+              Bike Shops
+              %span.chevron &raquo;
+      .subheader-tile.col-md-3
+        = link_to for_cities_path, class: "subheader-tile-link" do
+          .subheader-image.bg-image-bike-cities
+          .subheader-image-caption
+            %em for&nbsp;
+            %span.upcase
+              Cities
+              %span.chevron &raquo;
+      .subheader-tile.col-md-3
+        = link_to for_schools_path, class: "subheader-tile-link" do
+          .subheader-image.bg-image-bike-schools
+          .subheader-image-caption
+            %em for&nbsp;
+            %span.upcase
+              Schools
+              %span.chevron &raquo;
+      .subheader-tile.col-md-3
+        = link_to for_community_groups_path, class: "subheader-tile-link" do
+          .subheader-image.bg-image-bike-groups
+          .subheader-image-caption
+            %em for&nbsp;
+            %span.upcase
+              Community Groups
+              %span.chevron &raquo;
 
-              .checkbox
-                %label
-                  = f.check_box :terms_of_service
-                  I agree to Bike Index
-                  %a.no-tab{ data: { target: terms_url } }
-                    terms and conditions
-
-              = f.submit 'Sign up for free', class: 'btn btn-success btn-lg'
-              .or-block
-                or
-              %a.btn.btn-primary.btn-lg.root-landing-facebook{ href: '/auth/facebook' }
-                Sign up for free with Facebook
-
-  - cache 'root_body_wrap', skip_digest: true do # Expired in recovery_displays_controller
+  - cache "root_body_wrap", skip_digest: true do # Expired in recovery_displays_controller
     .root-landing-recovery-stories
       .container
         #recovery-stories-container.extras-hidden
@@ -88,8 +97,6 @@
 
       %a.btn.btn-lg.btn-success.root-action-btn{ href: new_bike_path }
         Register now!
-
-    = render partial: '/landing_pages/footer', locals: { is_root: true }
 
     .root-landing-who
       .container
