--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -3,9 +3,7 @@
     .container
       .root-landing-header-text
         %h2
-          Over
-          = number_with_delimiter(Counts.recoveries_value)
-          Bikes Recovered
+          $#{number_with_delimiter(Counts.recoveries_value)} Bikes Recovered
         %h1.upcase
           Bike registration that works
         %h2
