Fix homepage copy

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -3,7 +3,7 @@
     .container
       .root-landing-header-text
         %h2
-          $#{number_with_delimiter(Counts.recoveries_value)} Bikes Recovered
+          Over $#{number_with_delimiter(Counts.recoveries_value)} Worth of Bikes Recovered
         %h1.upcase
           Bike registration that works
         %h2
