Fix "for_cities" tweet
The tweet currently persisted has an outdated avatar url. This updates the tweet
partial to use a newly fetched version of the same tweet.

--- a/app/views/landing_pages/for_cities.haml
+++ b/app/views/landing_pages/for_cities.haml
@@ -41,7 +41,7 @@
 
 
         %p
-          = render partial: "/landing_pages/tweet", locals: { tweet_id: 1033174779585605633 }
+          = render partial: "/landing_pages/tweet", locals: { tweet_id: 12 }
 
         %h3 Our community is your community
 
